--- a/app/src/jsMain/resources/style/bpe.css
+++ b/app/src/jsMain/resources/style/bpe.css
@@ -18,7 +18,6 @@
     --subpanel-shift: 4px;
     --menu-font-size: 20px;
     --menu-offset: 24px;
-    --sheet-offset: 16px;
     --layers-width: 272px;
 
     --dialog-divider-size: 4px;
@@ -644,20 +643,20 @@ body {
 .drawing {
     position: absolute;
 
-    top: calc(var(--tool-size) + var(--panel-divider-size) + var(--sheet-offset));
-    right: var(--sheet-offset);
-    bottom: calc(var(--tool-size) + var(--panel-divider-size) + var(--sheet-offset));
-    left: var(--sheet-offset);
+    top: calc(var(--tool-size) + var(--panel-divider-size));
+    right: 0;
+    bottom: calc(var(--tool-size) + var(--panel-divider-size));
+    left: 0;
+}
+
+.drawing__sheet {
+    pointer-events: none;
 }
 
 .drawing__sheet,
 .drawing__areas {
     display: block;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     object-fit: contain;
 
     image-rendering: optimizeSpeed; /* Older versions of FF */
@@ -937,10 +936,10 @@ body {
     }
 
     .drawing {
-        top: var(--sheet-offset);
-        right: var(--sheet-offset);
-        bottom: var(--sheet-offset);
-        left: calc(var(--tool-size) * 2 + var(--panel-divider-size) + var(--sheet-offset));
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: calc(var(--tool-size) * 2 + var(--panel-divider-size));
     }
 
     .panel--palette .tool--active::before {
