--- a/features/ui-pwa-impl/src/jsMain/resources/style/bpe.css
+++ b/features/ui-pwa-impl/src/jsMain/resources/style/bpe.css
@@ -11,7 +11,7 @@
     --tool-size: 48px;
     --tool-md-size: 40px;
     --tool-sm-size: 32px;
-    --tool-xs-size: 24px;
+    --tool-xs-size: 25px;
     --tool-char-size: 24px;
     --panel-divider-size: 4px;
     --panel-active-highlight-size: 4px;
@@ -49,7 +49,6 @@
     --panel-active-highlight: var(--material-red--500);
     --panel-light-on: var(--material-red--500);
     --panel-light-off: var(--material-black);
-    --panel-transparent: var(--material-gray--500);
     --panel-focus: var(--material-gray--500);
     --panel-focus-opacity: 0.5;
 
@@ -427,29 +426,32 @@ body {
     background: var(--layers-tool-active);
 }
 
-.tool__light {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: var(--tool-size);
-    height: var(--tool-size);
-    border: var(--tool-offset) solid var(--panel-background);
+.tool__icon--light {
+    border: var(--tool-offset) solid transparent;
 }
 
-.subpanel .tool__light {
-    border-color: var(--subpanel-background);
+.tool__light > .tool__icon--light {
+    display: none;
+}
+
+.tool__light--on > .tool__icon--light__on {
+    display: block;
+}
+
+.tool__light--off > .tool__icon--light__off {
+    display: block;
+}
+
+.tool__light--transparent > .tool__icon--light__transparent {
+    display: block;
+}
+
+.tool__light--force_transparent > .tool__icon--light__force_transparent {
+    display: block;
 }
 
 .tool--active > .tool__light {
     border-color: var(--panel-active);
-}
-
-.tool__light--on {
-    background: var(--panel-light-on);
-}
-
-.tool__light--off {
-    background: var(--panel-light-off);
 }
 
 .tool__icon {
@@ -476,6 +478,7 @@ body {
     left: var(--offset);
     width: var(--tool-inner-size);
     height: var(--tool-inner-size);
+    overflow: hidden;
 }
 
 .tool__color_paper {
@@ -505,11 +508,9 @@ body {
 }
 
 .tool__char {
-    --offset: calc((var(--tool-size) - var(--tool-char-size)) / 2);
-
     position: absolute;
-    top: var(--offset);
-    left: var(--offset);
+    top: 0;
+    left: 0;
     width: var(--tool-char-size);
     height: var(--tool-char-size);
     background-image: url(../drawable/specscii__24x24.png);
@@ -555,19 +556,16 @@ body {
     display: block;
 }
 
-.tool__color_ink--transparent {
-    --half-size: calc(var(--tool-inner-size) / 2);
-
-    background-image: linear-gradient(45deg, var(--panel-transparent) 25%, transparent 25%),
-        linear-gradient(-45deg, var(--panel-transparent) 25%, transparent 25%),
-        linear-gradient(45deg, transparent 75%, var(--panel-transparent) 75%),
-        linear-gradient(-45deg, transparent 75%, var(--panel-transparent) 75%);
-
-    background-size: var(--tool-inner-size) var(--tool-inner-size);
-    background-position: 0 var(--half-size), 0 0, var(--half-size) 0, calc(var(--half-size) * -1) var(--half-size);
+.tool__color > .tool__indicator,
+.tool__color_paper > .tool__indicator,
+.tool__color_ink > .tool__indicator,
+.tool__char > .tool__indicator {
+    display: none;
 }
 
-.tool__char--transparent {
+.tool__char--transparent,
+.tool__char--force_transparent {
+    background: none;
     top: var(--tool-offset);
     right: var(--tool-offset);
     bottom: var(--tool-offset);
@@ -576,20 +574,36 @@ body {
     height: auto;
 }
 
-.tool__color--transparent,
-.tool__color_paper--transparent,
-.tool__light--transparent,
-.tool__char--transparent {
-    --size: calc(var(--tool-size) / 2 - var(--tool-offset));
-    --half-size: calc(var(--size) / 2);
+.tool__indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--tool-md-size);
+    height: var(--tool-md-size);
+}
 
-    background-image: linear-gradient(45deg, var(--panel-transparent) 25%, transparent 25%),
-        linear-gradient(-45deg, var(--panel-transparent) 25%, transparent 25%),
-        linear-gradient(45deg, transparent 75%, var(--panel-transparent) 75%),
-        linear-gradient(-45deg, transparent 75%, var(--panel-transparent) 75%);
+.subpanel .tool__indicator {
+    border: var(--tool-offset) solid transparent;
+}
 
-    background-size: var(--size) var(--size);
-    background-position: 0 var(--half-size), 0 0, var(--half-size) 0, calc(var(--half-size) * -1) var(--half-size);
+.tool__color--transparent > .tool__indicator--transparent,
+.tool__color_paper--transparent > .tool__indicator--transparent,
+.tool__color_ink--transparent > .tool__indicator--transparent,
+.tool__char--transparent > .tool__indicator--transparent {
+    display: block;
+}
+
+.tool__color--force_transparent > .tool__indicator--force_transparent,
+.tool__color_paper--force_transparent > .tool__indicator--force_transparent,
+.tool__color_ink--force_transparent > .tool__indicator--force_transparent,
+.tool__char--force_transparent > .tool__indicator--force_transparent {
+    display: block;
+}
+
+.tool--xs > .tool__indicator {
+    width: var(--tool-char-size);
+    height: var(--tool-char-size);
+    border-width: 0;
 }
 
 .tool__color--0,
@@ -990,7 +1004,10 @@ body {
         --informer-font-size: 14px;
     }
 
-    .tool--xs > .tool__char {
+    .tool--xs > .tool__char,
+    .tool--xs > .tool__indicator {
+        top: -2.5px;
+        left: -2.5px;
         transform: scale(0.8);
     }
 }
