Ability to move canvas (for desktop)

--- a/features/ui-pwa-impl/src/jsMain/resources/style/bpe.css
+++ b/features/ui-pwa-impl/src/jsMain/resources/style/bpe.css
@@ -658,6 +658,7 @@ body {
 
 .drawing {
     position: absolute;
+    overflow: hidden;
 
     top: calc(var(--tool-size) + var(--panel-divider-size));
     right: 0;
